# tango_with_django_project

./: .gitignore  populate_rango.py  pyproject.toml
rango/: admin.py  forms.py  models.py  urls.py  views.py
rango/migrations/: 0001_initial.py  0002_auto_20210125_1623.py  0003_auto_20210127_1530.py  0004_auto_20210127_1539.py  0005_userprofile.py
tango_with_django_project/: settings.py
templates/rango/: about.html  add_page.html  base.html  categories.html  category.html  index.html  register.html
